--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="https://ahsanur-42.github.io/Update-Portfolio/" target="_blank">About</a></li>
+                <li><a href="https://ahsanur-42.github.io/Update-Portfolio/" target="_blank">Home</a></li>
                 <li><a href="#blogs">Blogs</a></li>
             </ul>
         </nav>
