--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="mdahsanurrahaman.netlify.app">Home</a></li>
+                <li><a href="https://mdahsanurrahaman.netlify.app/">Home</a></li>
                 <li><a href="#blogs">Blogs</a></li>
             </ul>
         </nav>
